--- a/redirect-dougdemarco.html
+++ b/redirect-dougdemarco.html
@@ -1,1 +1,26 @@
-<html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">ol{margin:0;padding:0}table td,table th{padding:0}.c0{color:#000000;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:11pt;font-family:"Arial";font-style:normal}.c1{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}.c3{background-color:#ffffff;max-width:451.4pt;padding:72pt 72pt 72pt 72pt}.c2{height:11pt}.title{padding-top:0pt;color:#000000;font-size:26pt;padding-bottom:3pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:15pt;padding-bottom:16pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:20pt;color:#000000;font-size:20pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:18pt;color:#000000;font-size:16pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:16pt;color:#434343;font-size:14pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:14pt;color:#666666;font-size:12pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body class="c3 doc-content"><p class="c1"><span class="c0">&lt;!DOCTYPE html&gt;</span></p><p class="c1"><span class="c0">&lt;html lang=&quot;pt-br&quot;&gt;</span></p><p class="c1"><span class="c0">&nbsp; &lt;head&gt;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &lt;meta charset=&quot;UTF-8&quot;&gt;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &lt;title&gt;Redirecionando...&lt;/title&gt;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &lt;script&gt;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; const params = new URLSearchParams(window.location.search);</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; const url = params.get(&quot;u&quot;);</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; if (url) {</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; &nbsp; window.location.href = decodeURIComponent(url);</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; } else {</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; &nbsp; document.body.innerHTML = &quot;&lt;h2&gt;Link inv&aacute;lido. Verifique o e-mail digitado.&lt;/h2&gt;&quot;;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &nbsp; }</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &lt;/script&gt;</span></p><p class="c1"><span class="c0">&nbsp; &lt;/head&gt;</span></p><p class="c1"><span class="c0">&nbsp; &lt;body&gt;</span></p><p class="c1"><span class="c0">&nbsp; &nbsp; &lt;p style=&quot;font-family:sans-serif;font-size:18px;&quot;&gt;Carregando seu acesso personalizado...&lt;/p&gt;</span></p><p class="c1"><span class="c0">&nbsp; &lt;/body&gt;</span></p><p class="c1"><span class="c0">&lt;/html&gt;</span></p><p class="c1 c2"><span class="c0"></span></p><p class="c1 c2"><span class="c0"></span></p></body></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecionando...</title>
+</head>
+<body>
+  <p style="font-family:sans-serif;font-size:18px;">
+    Carregando seu acesso personalizado...
+  </p>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const params = new URLSearchParams(window.location.search);
+      const url = params.get('u');
+
+      if (url) {
+        const finalUrl = decodeURIComponent(url);
+        window.location.replace(finalUrl);
+      } else {
+        document.body.innerHTML = "<h2>Link inválido. Verifique o e-mail digitado.</h2>";
+      }
+    });
+  </script>
+</body>
+</html>
